# vivaldi-source

./: README.md  main.js
vivaldi-source/base/: source_updates_all.gni  vivaldi_switches.cpp  vivaldi_switches.h
vivaldi-source/components/capture/: BUILD.gn
vivaldi-source/components/request_filter/: BUILD.gn  request_filter.h  request_filter_manager.cc  request_filter_manager.h  request_filter_manager_factory.cc  request_filter_manager_factory.h  request_filter_proxying_url_loader_factory.cc  request_filter_proxying_url_loader_factory.h  request_filter_proxying_webtransport.cc  request_filter_registry.cc  request_filter_registry.h
vivaldi-source/extensions/: BUILD.gn  deps_updates.gni  source_updates.gni  vivaldi_associated_tabs.cc  vivaldi_associated_tabs.h  vivaldi_browser_component_wrapper.cc  vivaldi_browser_component_wrapper.h  vivaldi_extension_handover.cc  vivaldi_extension_handover.h  vivaldi_extensions_guest_view.cc  vivaldi_silent_extension_installer.h
vivaldi-source/extensions/api/: BUILD.gn  _api_features.json  _permission_features.json
vivaldi-source/extensions/helper/: BUILD.gn  file_selection_options.cc  vivaldi_frame_observer.cc  vivaldi_tab_utils.cc  vivaldi_tab_utils.h
vivaldi-source/extensions/histogram/: vivaldi_extension_function_histogram_value.inc
vivaldi-source/extensions/permissions/: vivaldi_api_permissions.cpp  vivaldi_extension_permission_injections.cc  vivaldi_extension_permission_injections.h  vivaldi_skip_api_permission_enums.inc
vivaldi-source/extensions/schema/: autoupdate.json  bookmarks_private.json  browser_action_utilities.json  content_blocking.json  direct_match.json  doh_functions.json  history_private.json  infobars.json  mail_private.json  omnibox_private.json  protonvpn.json  schemas.gni  search_engines.json  sync.json  tabs_private.json  vivaldi_utilities.json
vivaldi-source/extensions/tools/: BUILD.gn  vivaldi_tools.cpp  vivaldi_tools.h
vivaldi-source/gn/config/: features.gni  locales.gni
vivaldi-source/ios/: deps_update_ios.gni  source_updates.gni
vivaldi-source/ios/ad_blocker/: adblock_organized_rules_manager.cc  adblock_organized_rules_manager.h  adblock_rule_service_factory.h  adblock_rule_service_factory.mm  adblock_rule_service_impl.cc  adblock_rule_service_impl.h  adblock_rules_organizer.cc  ios_rules_compiler.cc  ios_rules_compiler.h  ios_rules_compiler_unittest.cc  utils.cc  utils.h
vivaldi-source/ios/background_audio/: BUILD.gn  background_audio_tab_helper.h  background_audio_tab_helper.mm
vivaldi-source/ios/direct_match/: direct_match_service_factory.h  direct_match_service_factory.mm
vivaldi-source/ios/most_visited_sites/: BUILD.gn  vivaldi_most_visited_sites_manager.h  vivaldi_most_visited_sites_manager.mm
vivaldi-source/ios/notes/: notes_factory.cc  notes_factory.h
vivaldi-source/ios/panel/: BUILD.gn  panel_interaction_controller.h  panel_interaction_controller.mm  panel_transitioning_delegate.h  sidebar_panel_presentation_controller.h  sidebar_panel_presentation_controller.mm  sidebar_panel_view_controller.mm
vivaldi-source/ios/sync/: BUILD.gn  file_store_factory.h  file_store_factory.mm  note_sync_service_factory.cc  note_sync_service_factory.h
vivaldi-source/ios/translate/: BUILD.gn  vivaldi_ios_th_service_bridge.h  vivaldi_ios_th_service_bridge.mm  vivaldi_ios_th_service_factory.h  vivaldi_ios_th_service_factory.mm  vivaldi_ios_translate_client.h  vivaldi_ios_translate_client.mm  vivaldi_ios_translate_service.mm
vivaldi-source/ios/vivaldi_account/: BUILD.gn
vivaldi-source/ios/website_dark_mode/: website_dark_mode_tab_helper.h  website_dark_mode_tab_helper.mm
vivaldi-source/sync/: BUILD.gn  note_sync_service_factory.cc  note_sync_service_factory.h  source_updates.gni  vivaldi_device_info_sync_client_impl.cc  vivaldi_sync_auth_manager.cc  vivaldi_sync_auth_manager.h  vivaldi_sync_service_impl.cc
vivaldi-source/sync/file_sync/: file_store_factory.cc  file_store_factory.h  file_store_impl.cc
vivaldi-source/sync/notes/: note_data_type_processor.cc  note_data_type_processor.h  note_model_merger.cc  note_model_merger.h  note_remote_updates_handler.cc  note_specifics_conversions.cc  note_specifics_conversions.h  note_update_preprocessing.cc  notes_model_observer_impl.cc  synced_note_tracker.cc  synced_note_tracker.h  synced_note_tracker_entity.cc
vivaldi-source/sync/test/: BUILD.gn
vivaldi-source/translate_history/: BUILD.gn  th_model.cc  th_model.h  th_service_factory.cc  th_service_factory.h  th_storage.cc  th_storage.h
vivaldi-source/ui/: BUILD.gn  deps_updates.gni  infobar_container_web_proxy.cc  infobar_container_web_proxy.h  lazy_load_service.cc  lazy_load_service.h  lazy_load_service_factory.cc  lazy_load_service_factory.h  source_updates.gni  vivaldi_bookmark_menu_mac.h  vivaldi_bookmark_menu_mac.mm  vivaldi_browser_window.cc  vivaldi_browser_window.h  vivaldi_context_menu_mac.mm  vivaldi_document_loader.cc  vivaldi_document_loader.h  vivaldi_infobar_delegate.cc  vivaldi_infobar_delegate.h  vivaldi_message_box_dialog.cc  vivaldi_quit_confirmation_dialog.cc  vivaldi_rootdocument_handler.cc  vivaldi_rootdocument_handler.h  vivaldi_side_panel_coordinator.cc  vivaldi_side_panel_coordinator.h  vivaldi_tab_model.cc  vivaldi_tab_strip_model.cc  vivaldi_ui_web_contents_delegate.cc  web_ui_native_call_utils.cc  web_ui_native_call_utils.h  window_registry_service.h  window_registry_service_factory.cc  window_registry_service_factory.h
vivaldi-source/ui/about/: vivaldi_about_version.cc
vivaldi-source/ui/content/: vivaldi_event_hooks.cc
vivaldi-source/ui/devtools/: devtools_connector.cc  devtools_connector.h
vivaldi-source/ui/vector_icons/: BUILD.gn  vivaldi_heart.icon
vivaldi-source/ui/views/: vivaldi_bookmark_menu_controller_views.cc  (+6 more)
vivaldi-source/vivaldi_account/: BUILD.gn  vivaldi_account_manager_android.cc  vivaldi_account_manager_factory.cc  vivaldi_account_manager_factory.h
vivaldi-source/vivaldi_status/: BUILD.gn  vivaldi_status.cc  vivaldi_status.h  vivaldi_status_factory.cc  vivaldi_status_factory.h
vivaldi-source/vivapp/: deps_updates.gni
(+3170 files in other folders)
