import ("//vivaldi/testing/testing.gni")

if (vivaldi_build_tests) {
  update_target("//chrome/test:browser_tests") {
    sources += [
      "//vivaldi/extensions/api/webview/chrome_web_view_mediastate_apitest.cc",
      "//vivaldi/extensions/api/tabs/tests/tabs_mediastate_apitest.cc",
    ]
  }
}

if (!is_android) {
  update_target("//chrome/common:common_lib") {
    sources -= ["initialize_extensions_client.cc"]
    sources += ["//vivaldi/extensions/vivaldi_initialize_extensions_client.cc"]
    deps += [ "//vivaldi/extensions:extensions_client" ]
  }
}

update_target("//extensions/renderer:renderer") {
  sources += [
    "//vivaldi/extensions/renderer/vivaldi_extension_frame_helper.cc",
    "//vivaldi/extensions/renderer/vivaldi_guest_view_internal_custom_bindings.cc",
    "//vivaldi/extensions/renderer/vivaldi_script_dispatcher.cpp",
    "//vivaldi/extensions/renderer/vivaldi_script_dispatcher.h",
    "//vivaldi/extensions/renderer/vivaldi_utilities_hook_delegate.cc",
    "//vivaldi/extensions/renderer/vivaldi_utilities_hook_delegate.h",
  ]

  deps += [
    "//components/lookalikes/core:proto",
    "//vivaldi/extensions:resources",
  ]
}

update_template_instance("//chrome/common/extensions/api:api_features") {
  sources += [ "//vivaldi/extensions/api/_api_features.json" ]
}

update_template_instance("//chrome/common/extensions/api:permission_features") {
  sources += [ "//vivaldi/extensions/api/_permission_features.json" ]
}

update_template_instance("//chrome/common/extensions/api:manifest_features") {
  sources += [ "//vivaldi/extensions/api/_manifest_features.json" ]
}

update_target("//extensions/browser:browser_sources") {
  sources += [
    "//vivaldi/extensions/vivaldi_extensions_guest_view.cc",
    "//vivaldi/extensions/vivaldi_extension_prefs.cc",
    "//vivaldi/extensions/api/events/vivaldi_ui_events_keys.cc",
    "//vivaldi/extensions/api/events/vivaldi_ui_events.h",
    "//vivaldi/extensions/api/extension_action_utils/vivaldi_extension_host.cc",
    "//vivaldi/extensions/api/extension_action_utils/vivaldi_extension_host.h",
    "//vivaldi/extensions/api/guest_view/vivaldi_web_view_constants.cpp",
    "//vivaldi/extensions/api/guest_view/vivaldi_web_view_constants.h",
    "//vivaldi/extensions/api/guest_view/vivaldi_web_view_guest.cpp",
    "//vivaldi/extensions/api/guest_view/parent_tab_user_data.cpp",
    "//vivaldi/extensions/api/guest_view/parent_tab_user_data.h",
  ]
  deps += [
    "//chrome/browser/ui/webui/tab_search:mojo_bindings",
    "//chrome/common:mojo_bindings",
    "//components/language_detection/content/common:common",
    "//components/custom_handlers",
    "//components/security_state/content",
    "//components/sharing_message/proto",
    "//components/translate/content/browser",
    "//third_party/blink/public:blink_headers",
    #"//vivaldi/extensions/api:apis", # !!!DO NOT!!! re-enable, causes link errors for linux debug builds
    "//vivaldi/extensions/schema",
    "//vivaldi/extensions/tools",
    "//vivaldi/extensions/helper",
    "//vivaldi/prefs:prefs_files_generator",
  ]
}

update_target("//extensions/common:common") {
  sources += [
    "//vivaldi/extensions/permissions/vivaldi_extension_permission_injections.cc",
    "//vivaldi/extensions/permissions/vivaldi_extension_permission_injections.h",
  ]
}
