# Copyright (c) 2021 Vivaldi Technologies AS. All rights reserved

if (is_android) {
  import("//build/config/android/rules.gni")
}

static_library("translate_history") {
  sources = [
    "th_codec.cc",
    "th_codec.h",
    "th_constants.cc",
    "th_constants.h",
    "th_model_loaded_observer.cc",
    "th_model_loaded_observer.h",
    "th_model_loader.cc",
    "th_model_loader.h",
    "th_model_observer.h",
    "th_model.cc",
    "th_model.h",
    "th_node.cc",
    "th_node.h",
    "th_storage.cc",
    "th_storage.h",
  ]

  if (!is_ios) {
    sources += [
      "th_service_factory.cc",
      "th_service_factory.h",
    ]
  }

  deps = [
    "//base:base",
    "//base:i18n",
    "//components/keyed_service/core:core",
    "//skia",
    "//third_party/icu",
    "//ui/base:base",
    "//url:url",
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
    "//vivaldi/prefs",
  ]

  if (!is_ios) {
    deps += [
      "//components/keyed_service/content:content",
      "//content/public/browser",
      "//chrome/common:constants",
    ]
  }

  public_deps = [
    "//components/sync/protocol",
  ]
}
