# Copyright (c) 2015-2017 Vivaldi Technologies AS. All rights reserved

update_target("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/ui",
  ]
  allow_circular_includes_from += [
    "//vivaldi/ui",
  ]
}

update_target("//chrome/browser/ui:ui") {
  public_deps += [
    "//vivaldi/components:tabs",
    "//vivaldi/ui",
    "//vivaldi/vivaldi_account:vivaldi_account_manager_factory"
  ]
  allow_circular_includes_from += [
    "//vivaldi/ui",
  ]
}
