
source_set("vivaldi_account") {
  sources = [
    "vivaldi_account_manager.cc",
    "vivaldi_account_manager.h",
    "vivaldi_account_manager_request_handler.cc",
    "vivaldi_account_manager_request_handler.h",
    "vivaldi_account_password_handler.cc",
    "vivaldi_account_password_handler.h",
  ]

  deps = [
    "//base",
    "//base:i18n",
    "//components/autofill/core/common",
    "//components/keyed_service/core",
    "//components/os_crypt/sync",
    "//components/prefs",
    "//components/sync/service",
    "//components/password_manager/core/browser",
    "//net",
    "//net/traffic_annotation",
    "//services/network/public/cpp",
    "//url",
    "//vivaldi/prefs:prefs_files_generated",
  ]
  configs += [
    "//vivaldi/gn/config:release_kind"
  ]

  if (is_android) {
    sources += [
      "vivaldi_account_manager_android.cc",
      "vivaldi_account_manager_android.h",
    ]

    deps += [
      "//chrome/android:jni_headers",
    ]
  }

  if(is_ios) {
    deps += [
      "//components/keyed_service/ios",
    ]
  }
}

source_set("vivaldi_account_manager_factory") {

  sources = [
      "vivaldi_account_manager_factory.cc",
      "vivaldi_account_manager_factory.h",
  ]

  deps = [
    "//chrome/common:buildflags",
    "//components/keyed_service/content",
    "//content/public/browser",
  ]
}
