import("//build/config/features.gni")

# Locales about to be added, but not ready
vivaldi_pending_locales = [
  "ca@valencia",
  "de-CH",
  "eo",
  "es-PE",
  "fy",
  "gd",
  "io",
  "ja-KS",
  "jbo",
  "kab",
  "kmr",
  "nn",
  "sc",
]

vivaldi_pending_mobile_locales = []
vivaldi_pending_ios_locales = []
# Locales that Vivaldi other platform may support but not iOS.
vivaldi_pending_ios_unsupported_locales = []
if (!is_android) {
  vivaldi_pending_mobile_locales += [
    "az",
    "be",
    "eu",
    "gl",
    "hy",
    "is",
    "ka",
    "mk",
    "pa",
    "sq",
    "sr-Latn",
  ]
  if (is_ios) {

    # Chromium supports these languages but has in extended_locales, we adjusted
    # extended_locales to include these languages hence subtracted from here.
    vivaldi_pending_mobile_locales -= [
      "be",
      "is",
      "ka",
      "sr-Latn",
    ]

    vivaldi_pending_ios_locales += [
      "am",
      "bn",
      "fil",
      "gu",
      "kn",
      "lv",
      "ml",
      "mr",
      "sw",
      "ta",
      "te",
      "ur",
    ]

    vivaldi_pending_ios_unsupported_locales = [
      "ca@valencia",
      "de-CH",
      "eo",
      "es-PE",
      "fy",
      "gd",
      "io",
      "ja-KS",
      "jbo",
      "kmr",
      "nn",
      "sc",
    ]
  }
}
