# Copyright 2022 Vivaldi Technologies AS. All rights reserved.

import("//build/config/ios/rules.gni")

bundle_data_xcassets("launchscreen_assets") {
  catalog = "Launchscreen.xcassets"
  sources = [
    "Launchscreen.xcassets/launchscreen_app_logo.imageset/Contents.json",
    "Launchscreen.xcassets/launchscreen_app_logo.imageset/launch_screen_icon_vivaldi.pdf",
    "Launchscreen.xcassets/launchscreen_brand_name.imageset/Contents.json",
    "Launchscreen.xcassets/launchscreen_brand_name.imageset/launchscreen_brand_name_dark@2x.png",
    "Launchscreen.xcassets/launchscreen_brand_name.imageset/launchscreen_brand_name_dark@3x.png",
    "Launchscreen.xcassets/launchscreen_brand_name.imageset/launchscreen_brand_name_light@2x.png",
    "Launchscreen.xcassets/launchscreen_brand_name.imageset/launchscreen_brand_name_light@3x.png",
  ]
}

bundle_data_xcassets("resources") {
  catalog = "Assets.xcassets"
  sources = [
    "Assets.xcassets/Contents.json",
    "Assets.xcassets/ExtensionIcon.appiconset/Contents.json",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_1024_1x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_20_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_20_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_29_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_29_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_38_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_38_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_40_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_40_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_60_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_60_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_64_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_64_3x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_68_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_76_2x.png",
    "Assets.xcassets/ExtensionIcon.appiconset/monochrome_logo_83.5_2x.png",
  ]
}

bundle_data("vivaldi_appicons") {
  sources = [ "VivaldiAppIcons.xcassets" ]
  outputs = [ "{{bundle_resources_dir}}/{{source_file_part}}" ]
}
