# Copyright 2022 Vivaldi Technologies. All rights reserved.

source_set("vivaldi_ad_tracker_blocker") {
  sources = [
    "vivaldi_atb_constants.h",
    "vivaldi_atb_constants.mm",
    "vivaldi_atb_consumer.h",
    "vivaldi_atb_domain_source_mode.h",
    "vivaldi_atb_item.h",
    "vivaldi_atb_item.mm",
    "vivaldi_atb_setting_type.h",
    "vivaldi_atb_source_item.h",
    "vivaldi_atb_source_item.mm",
    "vivaldi_atb_source_type.h",
  ]

  deps = [
    "//base:i18n",
    "//base",
    "//ios/chrome/app/strings",
    "//ios/chrome/browser/page_info/ui_bundled",
    "//ios/chrome/common/ui/util",
    "//ui/base",
    "//vivaldi/ios/ui/ad_tracker_blocker/cells",
    "//vivaldi/ios/ui/ad_tracker_blocker/manager",
    "//vivaldi/ios/ui/ad_tracker_blocker/settings",
    "//vivaldi/ios/ui/site_tracker_prefs",
    "resources:assets",
  ]

  frameworks = [
    "Foundation.framework",
    "UIKit.framework",
  ]
}
